--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
           distribution: temurin
           cache: maven
       - name: Build
-        run: ./mvn compile quarkus:dev
+        run: ./mvnw compile quarkus:dev
